# dict

./: main.py  pyproject.toml
static/: dark.css
templates/: index.html  word.html
