[tool.poetry]
name = "dict"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
flask = "^1.1.2"
random-word = "^1.0.4"
wiktionaryparser = "^0.0.97"
RandomWords = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
